stats cards alignment bug fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -249,7 +249,7 @@ a:hover {
 	opacity: 0.8;
 }
 .proname_val {
-	font-size: 1.9em;
+	font-size: 1.7em;
 	font-weight: 500;
 	font-family: 'Roboto',sans-serif;
 }
@@ -291,7 +291,8 @@ a:hover {
 }
 .card {
 	background-color: #F9F4E0;
-	padding: 5px;
+	padding-top: 5px;
+  padding-bottom: 5px;
 	text-align: center;
 	border-radius: 15px;
 	margin-bottom: 20px;
